--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </form>
         <div class="weather-status text-white text-center">
-            <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
+            <img id="weatherIcon" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
             <h1 id="city">Dhaka</h1>
             <h3><span id="tamp">38.06</span>&deg;C</h3>
             <h1 id="weather" class="lead">Clouds</h1>
@@ -60,10 +60,10 @@
 
 
     </section>
-    <div class="min"> 
-        <img src="" >
-        <span id="flag"></span> 
-    </div> 
+    <div class="min">
+        <img src="">
+        <span id="flag"></span>
+    </div>
     <script src="app.js"></script>
 
 </body>
